--- a/{mydreamevents}/gallery.html
+++ b/{mydreamevents}/gallery.html
@@ -1,188 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Get Started - Destination Wedding in Shimla</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Gallery - Destination Wedding in Shimla</title>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Dancing+Script&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --primary: #800020;
-      --accent: #ffffff;
-    }
-
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: var(--accent);
-      color: #333;
-    }
-
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: var(--accent);
-      color: var(--text);
+      background: #fff;
+      color: #4b0000;
     }
 
     header {
-      background-color: var(--primary);
-      color: white;
+      background-color: #800020;
+      color: #fff;
       padding: 20px 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       text-align: center;
     }
 
-    .logo {
-      font-family: 'Great Vibes', cursive;
-      font-size: 36px;
-      font-weight: bold;
-      margin-bottom: 10px;
-      color: white;
-    }
+  .logo-link {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
+}
 
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 30px;
-      margin: 0;
-      padding: 0;
-      justify-content: center;
-    }
+.logo-img {
+  height: 200px;
+}
 
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      font-family: 'Dancing Script', cursive;
-      font-size: 20px;
-      transition: all 0.3s ease;
-    }
-
-    nav ul li a:hover,
-    nav ul li a.active {
-      border-bottom: 2px solid white;
-      padding-bottom: 3px;
-    }
+.logo-text {
+  font-family: 'Hello Paris', cursive;
+  font-size: 28px;
+  color: black;
+}
 
 
-    h1 {
-      font-size: 32px;
-      margin-bottom: 10px;
-    }
+   nav {
+  background-color: white; /* or your preferred color */
+  width: 100%;
+  padding: 20px 40px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 25px;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li a {
+  color: black;
+  text-decoration: none;
+}
+nav a:hover {
+  color: #ff4081;
+  text-decoration: underline;
+}
+nav ul li a.active {
+  border-bottom: 2px solid white;
+  padding-bottom: 3px;
+}
+ nav a.active {
+  color: #e91e63 !important; /* Bright pink highlight */
+  border-bottom: 3px solid #e91e63;
+  padding-bottom: 2px;
+}
+
 
     section {
-      padding: 40px 20px;
-      max-width: 800px;
+      padding: 50px 20px;
+      max-width: 1200px;
       margin: auto;
     }
 
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
+    h2 {
+      text-align: center;
+      font-size: 36px;
+      color: #800020;
+      margin-bottom: 40px;
+      font-family: 'Dancing Script', cursive;
     }
 
-    label {
-      font-weight: bold;
+    .gallery-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
     }
 
-    input, textarea, select {
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
+    .gallery-grid img {
+      width: 100%;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(128, 0, 32, 0.1);
     }
 
-    button {
-      background-color: var(--primary);
-      color: white;
-      border: none;
-      padding: 12px;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #a83240;
+    footer {
+      background-color: #f8f8f8;
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+      color: #800020;
+      margin-top: 50px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <div class="logo">Destination Wedding in Shimla</div>
+ <header style="background-color: white; padding: 20px 60px;">
+  <div style="display: flex; justify-content: space-between; align-items: center;">
+
+    <!-- LOGO LEFT -->
+    <a href="index.html" class="logo-link" style="display: flex; align-items: center; gap: 15px; text-decoration: none;">
+      <img src="file:///H:/kotirow%20video/ChatGPT%20Image%20Jul%209,%202025,%2005_09_41%20PM%20(1).png" alt="Logo" class="logo-img" style="height: 150px;">
+      <div class="logo-text" style="font-family: 'Hello Paris', cursive; font-size: 42px; color: black;">
+      </div>
+    </a>
+
+    <!-- NAVIGATION RIGHT -->
     <nav>
-      <ul>
-        <li><a href="frontpage.html" class="active">Home</a></li>
-        <li><a href="destination.html">Destinations</a></li>
-        <li><a href="packages (2).html">Packages</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact(2).html">Contact</a></li>
-        <li> <a href="testimonials(2).html"> Testimonials</a></li>
-        <li><a href="aboutus(2).html">About Us</a></li>
+      <ul style="list-style: none; display: flex; gap: 40px; margin: 0; padding: 0;">
+        <li><a href="index.html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Home</a></li>
+        <li><a href="destination.html" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Destinations</a></li>
+        <li><a href="packages (2).html" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Packages</a></li>
+        <li><a href="gallery.html"  class="active" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Gallery</a></li>
+        <li><a href="contact(2).html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Contact</a></li>
+        <li><a href="testimonials(2).html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Testimonials</a></li>
+        <li><a href="aboutus(2).html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">About Us</a></li>
       </ul>
     </nav>
-  </header>
-  <section>
-    <form action="#" method="post">
-      <label for="name">Full Name:</label>
-      <input type="text" id="name" name="name" required>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+  </div>
+</header>
 
-      <label for="phone">Phone Number:</label>
-      <input type="tel" id="phone" name="phone" required>
-
-      <label for="destination">Preferred Destination:</label>
-      <select id="destination" name="destination">
-        <option value="">-- Select Destination --</option>
-        <option value="Shimla">Shimla</option>
-        <option value="Manali">Manali</option>
-        <option value="Udaipur">Udaipur</option>
-        <option value="Jaipur">Jaipur</option>
-        <option value="Goa">Goa</option>
-        <option value="Kerala">Kerala</option>
-        <option value="Rishikesh">Rishikesh</option>
-        <option value="Mussoorie">Mussoorie</option>
-        <option value="Jim Corbett">Jim Corbett</option>
-        <option value="Dharamshala">Dharamshala</option>
-        <option value="Kasauli">Kasauli</option>
-        <option value="Kashmir">Kashmir</option>
-        <option value="Lonavala">Lonavala</option>
-        <option value="Andaman & Nicobar">Andaman & Nicobar</option>
-      </select>
-
-
-     <label for="phone">Phone Number:</label>   
-      <input type="tel" id="phone" name="phone" placeholder="+91-XXXXXXXXXX" required>
-
-     <label for="date">Preferred Wedding Date:</label>
-      <input type="date" id="date" name="date" required>
-
-     <label for="guests">Number of Guests:</label>
-      <input type="number" id="guests" name="guests" min="10" max="1000" required>
-
-     <label for="services">Type of Services:</label>
-      <select id="services" name="services" required>
-      <option value="">-- Select Service --</option>
-      <option value="Full Wedding Planning">Full Wedding Planning</option>
-      <option value="Venue Booking">Venue Booking</option>
-      <option value="Decoration Only">Decoration Only</option>
-      <option value="Photography & Videography">Photography & Videography</option>
-      <option value="Makeup & Styling">Makeup & Styling</option>
-      <option value="Entertainment">Entertainment</option>
-      <option value="Catering">Catering</option>
-      <option value="Invites & Stationery">Invites & Stationery</option>
-      <option value="Custom Package">Custom Package</option>
-      </select>
-
-     <label for="message">Your Message:</label>
-      <textarea id="message" name="message" rows="4" placeholder="Tell us your preferences, venue ideas, themes, etc." required></textarea>
-
-      <button type="submit">Submit</button>
-    </form>
+  <section id="gallery">
+    <h2>Wedding Moments</h2>
+    <div class="gallery-grid">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/wedding_photo_bride_dress.jpg.JPG" alt="Bride">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/BIRTHDAY_BALLOONS_ARCH_COLORFUL.JPG" alt="BIRTHDAY">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/FLORAL_LAMP_NIGHTBLOOM.JPG" alt="Flowers">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/mandapwiithTraditionalElements.JPG" alt="Ceremony">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/bride_and_groom_portarait.JPG" alt="Reception">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/indian_wedding_haldi_cremony_lav.jpg" alt="haldi">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/destination_wedding_in_shimla52.JPG" alt="ceremony">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/destination_wedding_in_shimla39.JPG" alt="ring Ceremony"> 
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/destination_wedding_in_shimla21.JPG" alt="decor">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/destination_wedding_in_shimla24.JPG" alt="decor">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/mehendi_Guest_Seation_cushions_Boho.JPG" alt="Mehendi">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/Mehendi_Deocr_Daylight_shots_Bride.JPG" alt="Mehendi">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/dance_Energetic_Sangeet.JPG" alt="dancers">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/dance_portrait_Nati.JPG" alt="dancers">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/sangeet_ceremony.jpg.JPG" alt="sangeet">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/Mehendi_PhotoBooth_Quirky_Frames.JPG" alt="decor">
+      <img src="file:///H:/.html%20fileof%20new%20web/galleryimages/wedding_bride_groom_Portrait.JPG" alt="bride & groom">
+    </div>
   </section>
+
+<footer>
+  <div style="max-width: 1200px; margin: auto; padding: 20px;">
+    <div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 20px; text-align: left;">
+      
+      <!-- Contact Info -->
+      <div style="flex: 1; min-width: 200px;">
+        <h3 style="color:#800020;">Contact Us</h3>
+        <p><strong>My Dream Events</strong></p>
+        <p>Shimla, Himachal Pradesh, India</p>
+        <p>Phone: <a href="tel:+918219559908" style="color:#800020; text-decoration: none;">+91-8219559908</a></p>
+        <p>Email: <a href="mailto:team@mydreamevent.in" style="color:#800020; text-decoration: none;">team@mydreamevent.in</a></p>
+      </div>
+
+      <!-- Quick Links -->
+      <div style="flex: 1; min-width: 200px;">
+        <h3 style="color: #800020;">Quick Links</h3>
+        <p><a href="index.html" style="color:#800020; text-decoration: none;">Home</a></p>
+        <p><a href="packages (2).html" style="color:#800020; text-decoration: none;">Packages</a></p>
+        <p><a href="gallery.html" style="color:#800020; text-decoration: none;">Gallery</a></p>
+        <p><a href="contact(2).html" style="color:#800020; text-decoration: none;">Contact Us</a></p>
+      </div>
+
+      <!-- Social Media -->
+      <div style="flex: 1; min-width: 200px;">
+        <h3 style="color: #800020;">Follow Us</h3>
+        <p><a href="#" style="color:#800020; text-decoration: none;">Instagram</a></p>
+        <p><a href="#" style="color:#800020; text-decoration: none;">Facebook</a></p>
+        <p><a href="#" style="color:#800020; text-decoration: none;">YouTube</a></p>
+      </div>
+
+    </div>
+
+    <hr style="margin: 20px 0; border: 0; border-top: 1px solid #ccc;" />
+    <p style="text-align: center; color: #800020;">&copy; 2025 My Dream Events – All Rights Reserved</p>
+  </div>
+</footer>
 </body>
 </html>
