--- a/{mydreamevents}/classicalpackages.html
+++ b/{mydreamevents}/classicalpackages.html
@@ -298,7 +298,7 @@ section {
 
  
   <div class="cta">
-    <a href="contact(2).html" class="btn"> Enquire Now</a>
+    <a href="contactus.html" class="btn"> Enquire Now</a>
   </div>
 </section>
 
