--- a/{mydreamevents}/destination.html
+++ b/{mydreamevents}/destination.html
@@ -157,11 +157,11 @@ nav ul li a.active {
       <ul style="list-style: none; display: flex; gap: 40px; margin: 0; padding: 0;">
         <li><a href="index.html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Home</a></li>
         <li><a href="destination.html" class="active" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Destinations</a></li>
-        <li><a href="packages (2).html" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Packages</a></li>
+        <li><a href="packages.html" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Packages</a></li>
         <li><a href="gallery.html" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Gallery</a></li>
-        <li><a href="contact(2).html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Contact</a></li>
-        <li><a href="testimonials(2).html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Testimonials</a></li>
-        <li><a href="aboutus(2).html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">About Us</a></li>
+        <li><a href="contactus.html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Contact</a></li>
+        <li><a href="testimonial.html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Testimonials</a></li>
+        <li><a href="abooutus.html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">About Us</a></li>
       </ul>
     </nav>
 
@@ -173,42 +173,42 @@ nav ul li a.active {
   <div class="destination-list">
 
     <!-- Hill Stations -->
-   <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+   <a href="contactus.html" style="text-decoration: none; color: inherit;">
   <div class="destination-card">
     <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/shimla.jpeg" alt="Shimla">
     <h3>Shimla</h3>
     <p>Colonial charm and pine-covered hills offer a magical setting for your wedding day.</p>
   </div>
 </a>
- <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+ <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/manali.jpeg" alt="Manali">
       <h3>Manali</h3>
       <p>Romantic snow-capped peaks and cozy venues ideal for dreamy celebrations.</p>
   </div>
     </a>
-    <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+    <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/dharamshala.jpeg" alt="Dharamshala">
       <h3>Dharamshala</h3>
       <p>A spiritual and scenic Himalayan escape perfect for intimate weddings.</p>
     </div>
     </a>
-    <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+    <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/kasauli.jpeg" alt="Kasauli">
       <h3>Kasauli</h3>
       <p>A quaint hill town perfect for peaceful and budget-friendly weddings.</p>
     </div>
     </a>
-    <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+    <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/mussoorie.jpeg" alt="Mussoorie">
       <h3>Mussoorie</h3>
       <p>Queen of the Hills with breathtaking views and luxury wedding resorts.</p>
     </div>
     </a>
-    <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+    <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/rishikesh.jpeg" alt="Rishikesh">
       <h3>Rishikesh</h3>
@@ -216,14 +216,14 @@ nav ul li a.active {
     </div>
     </a>
     <!-- Forest & Nature Retreats -->
-     <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+     <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/jimcorbett.jpeg" alt="Jim Corbett">
       <h3>Jim Corbett</h3>
       <p>Wild luxury amidst nature – perfect for adventurous wedding couples.</p>
     </div>
     </a>
-    <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+    <a href="contactus.html" style="text-decoration: none; color: inherit;">
   <div class="destination-card">
     <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/kashmir.jpeg" alt="Kashmir">
     <h3>Kashmir</h3>
@@ -233,21 +233,21 @@ nav ul li a.active {
 
 
     <!-- Palace & Heritage Cities -->
-     <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+     <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/udaipur.jpeg" alt="Udaipur">
       <h3>Udaipur</h3>
       <p>The royal city of lakes with grand palaces and regal settings.</p>
     </div>
     </a>
-    <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+    <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/jaipur.jpeg" alt="Jaipur">
       <h3>Jaipur</h3>
       <p>The Pink City with heritage forts, luxury hotels, and vibrant culture.</p>
     </div>
     </a>
-    <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+    <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/jodhpur.jpeg" alt="Jodhpur">
       <h3>Jodhpur</h3>
@@ -256,21 +256,21 @@ nav ul li a.active {
     </a>
 
     <!-- Beach Destinations -->
-     <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+     <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/goa.jpeg" alt="Goa">
       <h3>Goa</h3>
       <p>Sun-kissed beaches and tropical venues for vibrant beach weddings.</p>
     </div>
     </a>
-    <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+    <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/kerela.jpeg" alt="Kerala">
       <h3>Kerala</h3>
       <p>Backwaters and lush landscapes create serene wedding experiences.</p>
     </div>
     </a>
-    <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+    <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/andamanandnicobar.jpeg" alt="Andaman & Nicobar">
       <h3>Andaman & Nicobar</h3>
@@ -279,7 +279,7 @@ nav ul li a.active {
     </a>
 
     
-    <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+    <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/coorg.jpeg" alt="Coorg">
       <h3>Coorg</h3>
@@ -289,14 +289,14 @@ nav ul li a.active {
 
     <!-- Offbeat / Trending -->
      
-    <a href="contact(2).html" style="text-decoration: none; color: inherit;">
+    <a href="contactus.html" style="text-decoration: none; color: inherit;">
     <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/alibaug.jpeg" alt="Alibaug">
       <h3>Alibaug</h3>
       <p>A popular beach escape near Mumbai with villas and sea-view venues.</p>
     </div>
     </a>
-    <a href="contact(2).html" style="text-decoration: none; color: inherit;">    
+    <a href="contactus.html" style="text-decoration: none; color: inherit;">    
       <div class="destination-card">
       <img src="file:///H:/.html%20fileof%20new%20web/destinationpageimages/lonavala.jpeg" alt="Lonavala">
       <h3>Lonavala</h3>
@@ -324,9 +324,9 @@ nav ul li a.active {
       <div style="flex: 1; min-width: 200px;">
         <h3 style="color:#800020;">Quick Links</h3>
         <p><a href="index.html" style="color:#800020; text-decoration: none;">Home</a></p>
-        <p><a href="packages (2).html" style="color:#800020; text-decoration: none;">Packages</a></p>
+        <p><a href="packages.html" style="color:#800020; text-decoration: none;">Packages</a></p>
         <p><a href="gallery.html" style="color:#800020; text-decoration: none;">Gallery</a></p>
-        <p><a href="contact(2).html" style="color:#800020; text-decoration: none;">Contact Us</a></p>
+        <p><a href="contactus.html" style="color:#800020; text-decoration: none;">Contact Us</a></p>
       </div>
 
       <!-- Social Media -->
