--- a/{mydreamevents}/getstarted.html
+++ b/{mydreamevents}/getstarted.html
@@ -116,11 +116,11 @@
       <ul>
         <li><a href="frontpage.html" class="active">Home</a></li>
         <li><a href="destination.html">Destinations</a></li>
-        <li><a href="packages (2).html">Packages</a></li>
+        <li><a href="packages.html">Packages</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact(2).html">Contact</a></li>
-        <li> <a href="testimonials(2).html"> Testimonials</a></li>
-        <li><a href="aboutus(2).html">About Us</a></li>
+        <li><a href="contactus.html">Contact</a></li>
+        <li> <a href="testimonial.html"> Testimonials</a></li>
+        <li><a href="abooutus.html">About Us</a></li>
       </ul>
     </nav>
   </header>
