--- a/{mydreamevents}/index.html
+++ b/{mydreamevents}/index.html
@@ -248,11 +248,11 @@ h2 {
       <ul style="list-style: none; display: flex; gap: 40px; margin: 0; padding: 0; color: #800020;" >
        <li><a href="index.html" class="active" style="text-decoration: none; font-size: 20px; font-weight: 600;">Home</a></li>
        <li><a href="destination.html" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Destinations</a></li>
-        <li><a href="packages (2).html" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Packages</a></li>
+        <li><a href="packages.html" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Packages</a></li>
         <li><a href="gallery.html" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Gallery</a></li>
-        <li><a href="contact(2).html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Contact</a></li>
-        <li><a href="testimonials(2).html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Testimonials</a></li>
-        <li><a href="aboutus(2).html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">About Us</a></li>
+        <li><a href="contactus.html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Contact</a></li>
+        <li><a href="testimonial.html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Testimonials</a></li>
+        <li><a href="abooutus.html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">About Us</a></li>
       </ul>
     </nav>
 
@@ -271,7 +271,7 @@ h2 {
   <div class="overlay-content">
     <h1 style="font-size: 48px; font-family: 'Georgia', serif; color: #800020;">Plan Your Dream Wedding</h1>
     <p style="font-size: 20px; color:#800020;">Celebrate love in the enchanting hills of Shimla</p>
-    <a href="getstart.html" class="btn" style="padding: 12px 30px; background: #800020; color:  #fff; text-decoration: none; border-radius: 30px; font-weight: bold;">Get Started</a>
+    <a href="getstarted.html" class="btn" style="padding: 12px 30px; background: #800020; color:  #fff; text-decoration: none; border-radius: 30px; font-weight: bold;">Get Started</a>
   </div>
 </div>
 
@@ -373,7 +373,7 @@ h2 {
     <p style="font-size: 18px; color: #444; margin-bottom: 30px;">
       Let us turn your dream wedding into a magical reality amidst the serene hills of Shimla.
     </p>
-    <a href="contact(2).html" class="btn" style="background-color: #800020; color: #fff; padding: 12px 28px; border-radius: 6px; font-size: 18px; text-decoration: none; transition: background 0.3s ease;">
+    <a href="contactus.html" class="btn" style="background-color: #800020; color: #fff; padding: 12px 28px; border-radius: 6px; font-size: 18px; text-decoration: none; transition: background 0.3s ease;">
       Contact Us Now
     </a>
   </div>
@@ -393,9 +393,9 @@ h2 {
         <div style="flex: 1; min-width: 200px;">
           <h3 style="color:#800020;">Quick Links</h3>
           <p><a href="index.html" style="color:#800020; text-decoration: none;">Home</a></p>
-          <p><a href="packages (2).html" style="color:#800020; text-decoration: none;">Packages</a></p>
+          <p><a href="packages.html" style="color:#800020; text-decoration: none;">Packages</a></p>
           <p><a href="gallery.html" style="color:#800020; text-decoration: none;">Gallery</a></p>
-          <p><a href="contact(2).html" style="color:#800020; text-decoration: none;">Contact Us</a></p>
+          <p><a href="contactus.html" style="color:#800020; text-decoration: none;">Contact Us</a></p>
         </div>
 
         <div style="flex: 1; min-width: 200px;">
