--- a/{mydreamevents}/abooutus.html
+++ b/{mydreamevents}/abooutus.html
@@ -144,11 +144,11 @@ nav a.active {
       <ul style="list-style: none; display: flex; gap: 40px; margin: 0; padding: 0;">
         <li><a href="index.html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Home</a></li>
         <li><a href="destination.html" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Destinations</a></li>
-        <li><a href="packages (2).html" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Packages</a></li>
+        <li><a href="packages.html" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Packages</a></li>
         <li><a href="gallery.html" style="color: black; text-decoration: none; font-size: 20px; font-weight: 600;">Gallery</a></li>
-        <li><a href="contact(2).html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Contact</a></li>
-        <li><a href="testimonials(2).html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Testimonials</a></li>
-        <li><a href="aboutus(2).html"  class="active" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">About Us</a></li>
+        <li><a href="contactus.html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Contact</a></li>
+        <li><a href="testimonial.html" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">Testimonials</a></li>
+        <li><a href="abooutus.html"  class="active" style="color:black; text-decoration: none; font-size: 20px; font-weight: 600;">About Us</a></li>
       </ul>
     </nav>
 
@@ -186,9 +186,9 @@ nav a.active {
         <div style="flex: 1; min-width: 200px;">
           <h3 style="color:#800020;">Quick Links</h3>
           <p><a href="index.html" style="color:#800020; text-decoration: none;">Home</a></p>
-          <p><a href="packages (2).html" style="color:#800020; text-decoration: none;">Packages</a></p>
+          <p><a href="packages.html" style="color:#800020; text-decoration: none;">Packages</a></p>
           <p><a href="gallery.html" style="color:#800020; text-decoration: none;">Gallery</a></p>
-          <p><a href="contact(2).html" style="color:#800020; text-decoration: none;">Contact Us</a></p>
+          <p><a href="contactus.html" style="color:#800020; text-decoration: none;">Contact Us</a></p>
         </div>
 
         <div style="flex: 1; min-width: 200px;">
